# pockybum522-challenges

./: README.md
2021-12-AoC-Scala/: .gitignore
2021-12-AoC-Scala/Day 01a/: build.sbt
2022-12-AoC-CSharp/Day_01a/Day1/: Program.cs
2022-12-AoC-CSharp/Day_01b/: Day1.sln
2022-12-AoC-CSharp/Day_06a/: AoC 2022 CSharp.sln
2022-12-Cpp/Day 01a/: CMakeLists.txt  main.cpp
2022-12-Cpp/Day 01b/: main.cpp
2022-12-Cpp/Day 02b/: main.cpp
2022-12-Cpp/Day 03a/: main.cpp
2022-12-Cpp/Day 04a/: main.cpp
2022-12-Cpp/Day 04b/: main.cpp
2022-12-Cpp/Day 09b/: CMakeLists.txt
2022-12-Cpp/Day 10a/: CMakeLists.txt
2024-12-AoC-CSharp/Day 01a/: CSharpAoC2024.sln  RawData.cs
2024-12-AoC-CSharp/Day 02a/: CSharpAoC2024.csproj  Program.cs
2024-12-AoC-CSharp/Day 02b/: Program.cs
2024-12-AoC-CSharp/Day 03a/: Program.cs  RawData.cs
2024-12-AoC-CSharp/Day 04a/: Program.cs  RawData.cs
2024-12-AoC-Go/: go.mod  main.go
2025-12-AoC-CSharp/Day 01a/: AoC 2025 CSharp.sln
AoC-2022-Cpp/Day 02a/: main.cpp
AoC-2022-Cpp/Day 03b/: main.cpp
AoC-2022-Cpp/Day 05ab/Day 05a (with crane)/: CMakeLists.txt
AoC-2022-Cpp/Day 05ab/Day 05a (with crane)/Logic/: ConsoleHelpers.h  CraneHandler.h
AoC-2022-Cpp/Day 05ab/Day 05a (with crane)/RawData/: RawData.h
AoC-2022-Cpp/Day 06ab/: main.cpp
AoC-2022-Cpp/Day 07a/: main.cpp
AoC-2022-Cpp/Day 07b/: CMakeLists.txt
AoC-2022-Cpp/Day 08b/: CMakeLists.txt
AoC-2022-Cpp/Day 09a/: CMakeLists.txt  main.cpp
AoC-2022-Cpp/Day 09a/Logic/: ListProcessor.h
AoC-2022-Cpp/Day 09a/Models/: Board.h  Rope.h
AoC-2022-Cpp/Day 09a/RawData/: RawData.cpp
AoC-2022-Cpp/Day 10a/: main.cpp
(+306 files in other folders)
